tests/panic_bad_arity.sl
// Verifies panic bad arity.
pub fn bad() {
	panic()
}
